src/objects/IS_Keyword__c.object
<CustomObject>
    <description>These keywords will help determine which Priority Mapping to assign to incoming IS Email-to-Cases</description>
    <fields>
        <fullName>Keyword_Length__c</fullName>
        <description>Keyword Length</description>
        <formula>LEN( Keyword__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Keyword Length</inlineHelpText>
        <label>Keyword Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>Keyword assigned to an incoming case from Email to Case</description>
        <label>Keyword</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Priority_Mapping__c</fullName>
        <description>Show the related priority map</description>
        <label>Priority Mapping</label>
        <referenceTo>Priority_Mapping__c</referenceTo>
        <relationshipLabel>IS Keywords</relationshipLabel>
        <relationshipName>IS_Keywords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>IS Keyword</label>
    <nameField>
        <displayFormat>ISKey{0000}</displayFormat>
        <label>IS Keyword Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IS Keywords</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>